# TaskScheduler

./: CMakeLists.txt  README.md
lib/: Auxillary.hpp  CMakeLists.txt  MyScheduler.hpp  TaskHelper.hpp
lib/utils/: MyExceptions.cpp  MyExceptions.hpp  MyFunction.hpp  MyTuple.hpp
tests/: CMakeLists.txt  MyScheduler_tests.cpp
